--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 web-sys = "0.3"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+async-channel = "1.6"
 wee_alloc = "0.4"
 console_error_panic_hook = "0.1"
 srs2dge = { path = "../srs2dge" }
@@ -28,3 +30,4 @@ winit = "0.26"
 instant = "0.1.12"
 console_log = { version = "0.2.0", features = ["color"] }
 log = "0.4.17"
+image = "0.24.2"
