--- a/www/package.json
+++ b/www/package.json
@@ -13,7 +13,8 @@
     "raw-loader": "^4.0.2",
     "shaderpg": "file:../pkg",
     "vue": "^3.0.0",
-    "vue-prism-editor": "^2.0.0-alpha.2"
+    "vue-prism-editor": "^2.0.0-alpha.2",
+    "vue3-tabs-component": "^1.0.7"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.13",
